--- a/spring-boot-hello/src/main/resources/static/index.html
+++ b/spring-boot-hello/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My WebSocket</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
@@ -12,54 +13,71 @@
 </body>
 
 <script type="text/javascript">
-    var websocket = null;
-
-    //判断当前浏览器是否支持WebSocket, 主要此处要更换为自己的地址
-    if ('WebSocket' in window) {
-        websocket = new WebSocket("ws://192.168.0.101:8092/test/oneToOne");
-    } else {
-        alert('Not support websocket')
+    mounted()
+    {
+        // WebSocket
+        if ('WebSocket' in window) {
+            this.websocket = new WebSocket('ws://localhost:8801/websocket/' + this.userName)
+            this.initWebSocket()
+        } else {
+            alert('当前浏览器 Not support websocket')
+        }
     }
-
-    //连接发生错误的回调方法
-    websocket.onerror = function () {
-        setMessageInnerHTML("error");
-    };
-
-    //连接成功建立的回调方法
-    websocket.onopen = function (event) {
-        //setMessageInnerHTML("open");
+    ,
+    beforeDestroy()
+    {
+        this.onbeforeunload()
     }
+    ,
+    methods: {
+        initWebSocket()
+        {
+            // 连接错误
+            this.websocket.onerror = this.setErrorMessage
 
-    //接收到消息的回调方法
-    websocket.onmessage = function (event) {
-        setMessageInnerHTML(event.data);
-    }
+            // 连接成功
+            this.websocket.onopen = this.setOnopenMessage
 
-    //连接关闭的回调方法
-    websocket.onclose = function () {
-        setMessageInnerHTML("close");
-    }
+            // 收到消息的回调
+            this.websocket.onmessage = this.setOnmessageMessage
 
-    //监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常。
-    window.onbeforeunload = function () {
-        websocket.close();
-    }
+            // 连接关闭的回调
+            this.websocket.onclose = this.setOncloseMessage
 
-    //将消息显示在网页上
-    function setMessageInnerHTML(innerHTML) {
-        document.getElementById('message').innerHTML += innerHTML + '<br/>';
-    }
-
-    //关闭连接
-    function closeWebSocket() {
-        websocket.close();
-    }
-
-    //发送消息
-    function send() {
-        var message = document.getElementById('text').value;
-        websocket.send(message);
+            // 监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常。
+            window.onbeforeunload = this.onbeforeunload
+        }
+    ,
+        setErrorMessage()
+        {
+            console.log('WebSocket连接发生错误   状态码：' + this.websocket.readyState)
+        }
+    ,
+        setOnopenMessage()
+        {
+            console.log('WebSocket连接成功    状态码：' + this.websocket.readyState)
+        }
+    ,
+        setOnmessageMessage(event)
+        {
+            // 根据服务器推送的消息做自己的业务处理
+            console.log('服务端返回：' + event.data)
+        }
+    ,
+        setOncloseMessage()
+        {
+            console.log('WebSocket连接关闭    状态码：' + this.websocket.readyState)
+        }
+    ,
+        onbeforeunload()
+        {
+            this.closeWebSocket()
+        }
+    ,
+        closeWebSocket()
+        {
+            this.websocket.close()
+        }
     }
 </script>
 </html>
